stdio 🤦‍♀️